# Greenlane

./: .gitignore  CODEBASE.md  LOCAL_LLM_TASKS.md  PRESENTATION_GUIDE.md  PRESENTATION_SCRIPT.md  README.md  package.json  planv.0.2.md  pnpm-workspace.yaml
backend/: .env.example  .gitignore  package.json  test-api.sh
backend/src/: server.ts
backend/src/config/: database.ts
backend/src/models/: Achievement.ts  Notification.ts  Product.ts  Scan.ts  User.ts  index.ts
backend/src/routes/: achievements.ts  notifications.ts  products.ts  scans.ts  users.ts
backend/src/services/: actian.ts  novita.ts
dashboard/: .env.example  .gitignore  README.md  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: achievements-card.tsx  achievements-connected.tsx  activity-chart-connected.tsx  activity-chart.tsx  app-header.tsx  app-sidebar.tsx  category-radar.tsx  dashboard-layout.tsx  leaderboard-card.tsx  leaderboard-connected.tsx  login-card.tsx  recent-activity-connected.tsx  recent-activity.tsx  stats-overview-connected.tsx  (+1 more)
extension/: .env.example  .gitignore  INTEGRATION_TEST.md  TEST_PLAN.md  background.ts  package.json  popup.tsx
extension/contents/: amazon-scraper.ts
local-llm/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-run.sh  export_executorch_model.py  export_model.py  server_docker.py  setup_executorch.sh
local-llm/models/: .gitkeep
local-llm/models/Llama-3.2-1B-ET/: README.md  config.json
local-llm/scripts/: download_model.sh
local-llm/src/: inference.cpp  inference.h  main.cpp  tokenizer.cpp  tokenizer.h
shared/: .gitignore  package.json
shared/types/: index.ts
(+10 files in other folders)
